logs/archive/child_20250911_190708.txt
  File "C:\Users\owner\Desktop\es_futures_backtester\paper_trader.py", line 815
    if args.one_tr
                  ^
SyntaxError: expected ':'
